hphp/test/zend/good/ext/phar/tests/tar/tar_openssl_hash.php
<?php
try {
	$phar = new PharData(dirname(__FILE__) . '/files/P1-1.0.0.tgz');
} catch (Exception $e) {
	echo $e->getMessage()."\n";
}

?>
===DONE===